<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/radio_title"
        android:textSize="@dimen/text_size"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/radio_am"
            android:textOff="@string/radio_am"
            android:id="@+id/tbRadioAm"
            android:background="@drawable/button_adb"
            android:textColor="@color/colorWhite"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/radio_fm"
            android:textOff="@string/radio_fm"
            android:id="@+id/tbRadioFm"
            android:background="@drawable/button_adb"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical">

            <ImageButton
                android:layout_width="@dimen/intern_btn_size"
                android:layout_height="@dimen/intern_btn_size"
                android:id="@+id/btnReward"
                android:background="@drawable/button_adb"
                android:src="@drawable/ic_skip_previous_white_36dp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtDial"
                android:gravity="center_horizontal"
                android:text="XX,X"
                android:textSize="60dp"
                android:textColor="@color/colorAccent"/>
            <ImageButton
                android:layout_width="@dimen/intern_btn_size"
                android:layout_height="@dimen/intern_btn_size"
                android:id="@+id/btnForward"
                android:background="@drawable/button_adb"
                android:src="@drawable/ic_skip_next_white_36dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtStationName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/radio_stat_name"
            android:gravity="center"
            android:textSize="@dimen/txt_aux_size"/>
    </LinearLayout>

    <!--<GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center">
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:text="@string/radio_empty"
            android:background="@drawable/button_adb"/>
    </GridView>-->

</LinearLayout>